export interface Turkey {
  gobble(): void;
  fly(): void;
}
